fix answer  whitespace

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -1111,7 +1111,7 @@ img.cand-pic {
   font-size: 1.1em;
   line-height: 150%;
   position: relative;
-  min-height: 320px;
+  min-height: 100px;
   -webkit-transition: height 0.3s;
   -moz-transition: height 0.3s;
   transition: height 0.3s;
